--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 <div class="iconBodytwo"><!-- 4.row -->
                     <div class="iconBlock dflex"><!-- 5.column -->
                         <div class="iconBox"><!-- 6.sub column -->
-                            <p>© Copyright @ 2022 By <span>Mr. Web Designer</span> | All Rights Reserved</p>
+                            <p>© Copyright @ 2022 By <span>Mr. Web Designer</span> | All Rights Reserve</p>
                         </div>
                     </div>
                 </div>
